fixed the spacing on the modal and added a transition effect for the modal

--- a/src/style.css
+++ b/src/style.css
@@ -182,27 +182,47 @@ button {
   width: 100%;
   height: 100%;
   margin-inline: auto;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: transparent;
   z-index: 1000;
+  scale: 0.95;
+  overflow-y: scroll;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
 }
 
 .modal-content {
+  border: 1px solid #ddd;
   background-color: white;
   margin-inline: auto;
-  margin-block: 2%;
-  padding: 20px;
+  margin-block: 1%;
+  padding: 0.5rem;
   width: 90%;
   max-width: 600px;
   max-height: 90vh;
   overflow-y: auto;
   border-radius: 8px;
   position: relative;
+  opacity: 0;
+  transition: transform 0.5s ease, opacity 0.5s ease;
 
   & h2 {
     font-family: "Crete Round", serif;
     text-decoration: underline;
     text-decoration-color: hsl(236, 94%, 67%);
     color: hsl(236, 94%, 67%);
+
+    &.modal-title {
+      margin-top: 0;
+
+      @media (max-width: 500px) {
+        margin-top: 0.05rem;
+      }
+    }
+
+    @media (max-width: 500px) {
+      margin-block: 0.5rem;
+    }
   }
 
   & .close {
@@ -221,6 +241,17 @@ button {
       opacity: 0.9;
     }
   }
+}
+
+.modal.active {
+  display: flex;
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal.active .modal-content {
+  transform: scale(1);
+  opacity: 1;
 }
 
 .cart-item {
@@ -265,7 +296,7 @@ button {
   }
 
   & input {
-    padding: 8px;
+    padding: 0.2rem;
     border: 2px solid #ddd;
     border-radius: 4px;
     font-size: clamp(0.9rem, 1vw, 1.1rem);
@@ -285,9 +316,14 @@ button {
   & label {
     color: #000;
     margin-inline: left;
-    margin-block: -0.5rem;
     font-size: clamp(0.8rem, 1vw, 1rem);
     font-weight: bold;
+    margin-bottom: -0.75rem;
+
+    @media (max-width: 500px) {
+      margin-top: 0.05rem;
+      margin-bottom: -1rem;
+    }
   }
 }
 
@@ -339,18 +375,16 @@ footer {
 }
 
 .cart-summary {
-  padding-top: 1rem;
-
   & .summary-line {
     display: flex;
     justify-content: space-between;
-    padding: 8px 0;
-    font-size: 1rem;
+    padding: 0.5rem 0 0 0;
+    font-size: clamp(0.9rem, 1vw, 1rem);
   }
 
   & .summary-line.total {
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: clamp(0.9rem, 1vw, 1rem);
     border-top: 1px solid #ddd;
     margin-top: 8px;
     padding-top: 12px;
